--- a/CaveIn/CaveIn.vcxproj
+++ b/CaveIn/CaveIn.vcxproj
@@ -10,6 +10,44 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\AudioRenderable.hpp" />
+    <ClInclude Include="Source\Bats.hpp" />
+    <ClInclude Include="Source\GameTimer.h" />
+    <ClInclude Include="Source\IGameCore.hpp" />
+    <ClInclude Include="Source\IPCMWave.hpp" />
+    <ClInclude Include="Source\ISound.hpp" />
+    <ClInclude Include="Source\IX3DAudio.hpp" />
+    <ClInclude Include="Source\IXACore.hpp" />
+    <ClInclude Include="Source\PCMWave.hpp" />
+    <ClInclude Include="Source\Rats.hpp" />
+    <ClInclude Include="Source\Rocks.hpp" />
+    <ClInclude Include="Source\Soundscape1Base.hpp" />
+    <ClInclude Include="Source\WaveFileManager.hpp" />
+    <ClInclude Include="Source\WaveFmt.hpp" />
+    <ClInclude Include="Source\WinCore.hpp" />
+    <ClInclude Include="Source\XACore.hpp" />
+    <ClInclude Include="Source\XASound.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\Bats.cpp" />
+    <ClCompile Include="Source\GameTimer.cpp" />
+    <ClCompile Include="Source\Main_Soundscape1.cpp" />
+    <ClCompile Include="Source\PCMWave.cpp" />
+    <ClCompile Include="Source\Rats.cpp" />
+    <ClCompile Include="Source\Rocks.cpp" />
+    <ClCompile Include="Source\Soundscape1Base.cpp" />
+    <ClCompile Include="Source\WaveFileManager.cpp" />
+    <ClCompile Include="Source\WinCore.cpp" />
+    <ClCompile Include="Source\XACore.cpp" />
+    <ClCompile Include="Source\XASound.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Sounds\bird.wav" />
+    <None Include="Sounds\car.wav" />
+    <None Include="Sounds\frogs.wav" />
+    <None Include="Sounds\rain.wav" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FBEAFB05-8793-46D2-8829-8B7A5B577D00}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -76,43 +114,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\Source\AudioRenderable.hpp" />
-    <ClInclude Include="..\Source\Bats.hpp" />
-    <ClInclude Include="..\Source\GameTimer.h" />
-    <ClInclude Include="..\Source\IGameCore.hpp" />
-    <ClInclude Include="..\Source\IPCMWave.hpp" />
-    <ClInclude Include="..\Source\ISound.hpp" />
-    <ClInclude Include="..\Source\IXACore.hpp" />
-    <ClInclude Include="..\Source\PCMWave.hpp" />
-    <ClInclude Include="..\Source\Rats.hpp" />
-    <ClInclude Include="..\Source\Rocks.hpp" />
-    <ClInclude Include="..\Source\Soundscape1Base.hpp" />
-    <ClInclude Include="..\Source\WaveFileManager.hpp" />
-    <ClInclude Include="..\Source\WaveFmt.hpp" />
-    <ClInclude Include="..\Source\WinCore.hpp" />
-    <ClInclude Include="..\Source\XACore.hpp" />
-    <ClInclude Include="..\Source\XASound.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\Source\Bats.cpp" />
-    <ClCompile Include="..\Source\GameTimer.cpp" />
-    <ClCompile Include="..\Source\Main_Soundscape1.cpp" />
-    <ClCompile Include="..\Source\PCMWave.cpp" />
-    <ClCompile Include="..\Source\Rats.cpp" />
-    <ClCompile Include="..\Source\Rocks.cpp" />
-    <ClCompile Include="..\Source\Soundscape1Base.cpp" />
-    <ClCompile Include="..\Source\WaveFileManager.cpp" />
-    <ClCompile Include="..\Source\WinCore.cpp" />
-    <ClCompile Include="..\Source\XACore.cpp" />
-    <ClCompile Include="..\Source\XASound.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Sounds\bird.wav" />
-    <None Include="..\Sounds\car.wav" />
-    <None Include="..\Sounds\frogs.wav" />
-    <None Include="..\Sounds\rain.wav" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
