--- a/CaveIn/CaveIn.vcxproj
+++ b/CaveIn/CaveIn.vcxproj
@@ -17,7 +17,7 @@
     <ClInclude Include="Source\IGameCore.hpp" />
     <ClInclude Include="Source\IPCMWave.hpp" />
     <ClInclude Include="Source\ISound.hpp" />
-    <ClInclude Include="Source\IX3DAudio.hpp" />
+    <ClInclude Include="Source\X3DSound.hpp" />
     <ClInclude Include="Source\IXACore.hpp" />
     <ClInclude Include="Source\PCMWave.hpp" />
     <ClInclude Include="Source\Rats.hpp" />
@@ -39,6 +39,7 @@
     <ClCompile Include="Source\Soundscape1Base.cpp" />
     <ClCompile Include="Source\WaveFileManager.cpp" />
     <ClCompile Include="Source\WinCore.cpp" />
+    <ClCompile Include="Source\X3DSound.cpp" />
     <ClCompile Include="Source\XACore.cpp" />
     <ClCompile Include="Source\XASound.cpp" />
   </ItemGroup>
