--- a/CaveIn/CaveIn.vcxproj.filters
+++ b/CaveIn/CaveIn.vcxproj.filters
@@ -72,9 +72,6 @@
     <ClInclude Include="Source\XASound.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Rats.hpp">
-      <Filter>Header Files\Soundscape</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Rocks.hpp">
       <Filter>Header Files\Sound Cues\Warnings</Filter>
     </ClInclude>
@@ -94,6 +91,12 @@
       <Filter>Header Files\Sound Cues</Filter>
     </ClInclude>
     <ClInclude Include="Source\Bats.hpp">
+      <Filter>Header Files\Sound Cues\Warnings</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Rats.hpp">
+      <Filter>Header Files\Sound Cues\Warnings</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Bear.hpp">
       <Filter>Header Files\Sound Cues\Warnings</Filter>
     </ClInclude>
   </ItemGroup>
@@ -119,9 +122,6 @@
     <ClCompile Include="Source\Rocks.cpp">
       <Filter>Source Files\Sound Cues\Warnings</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Rats.cpp">
-      <Filter>Source Files\Soundscape</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Soundscape.cpp">
       <Filter>Source Files\Soundscape</Filter>
     </ClCompile>
@@ -135,6 +135,12 @@
       <Filter>Source Files\Sound Cues</Filter>
     </ClCompile>
     <ClCompile Include="Source\Bats.cpp">
+      <Filter>Source Files\Sound Cues\Warnings</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Rats.cpp">
+      <Filter>Source Files\Sound Cues\Warnings</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Bear.cpp">
       <Filter>Source Files\Sound Cues\Warnings</Filter>
     </ClCompile>
   </ItemGroup>
