added start finish

--- a/CaveIn/CaveIn.vcxproj
+++ b/CaveIn/CaveIn.vcxproj
@@ -16,6 +16,7 @@
     <ClInclude Include="Source\Bats.hpp" />
     <ClInclude Include="Source\Bear.hpp" />
     <ClInclude Include="Source\Directions.hpp" />
+    <ClInclude Include="Source\Finish.hpp" />
     <ClInclude Include="Source\Path.hpp" />
     <ClInclude Include="Source\Rats.hpp" />
     <ClInclude Include="Source\GameTimer.h" />
@@ -26,8 +27,11 @@
     <ClInclude Include="Source\IXACore.hpp" />
     <ClInclude Include="Source\PCMWave.hpp" />
     <ClInclude Include="Source\Rocks.hpp" />
+    <ClInclude Include="Source\Shuffle.hpp" />
     <ClInclude Include="Source\SoundCues.hpp" />
     <ClInclude Include="Source\Soundscape.hpp" />
+    <ClInclude Include="Source\Start.hpp" />
+    <ClInclude Include="Source\Walking.hpp" />
     <ClInclude Include="Source\Wall.hpp" />
     <ClInclude Include="Source\Water.hpp" />
     <ClInclude Include="Source\WaveFileManager.hpp" />
@@ -40,14 +44,18 @@
     <ClCompile Include="Source\Bats.cpp" />
     <ClCompile Include="Source\Bear.cpp" />
     <ClCompile Include="Source\Directions.cpp" />
+    <ClCompile Include="Source\Finish.cpp" />
     <ClCompile Include="Source\Path.cpp" />
     <ClCompile Include="Source\Rats.cpp" />
     <ClCompile Include="Source\GameTimer.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\PCMWave.cpp" />
     <ClCompile Include="Source\Rocks.cpp" />
+    <ClCompile Include="Source\Shuffle.cpp" />
     <ClCompile Include="Source\SoundCues.cpp" />
     <ClCompile Include="Source\Soundscape.cpp" />
+    <ClCompile Include="Source\Start.cpp" />
+    <ClCompile Include="Source\Walking.cpp" />
     <ClCompile Include="Source\Wall.cpp" />
     <ClCompile Include="Source\Water.cpp" />
     <ClCompile Include="Source\WaveFileManager.cpp" />
